이미지새로고침

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
             <h1> 안녕 나는 이준 </h1>
-            <img src ="/imfinethankyouandyou-main/image/미라클 고양이.jpg" alt = "Profile Zone">
+            <img src ="/imfinethankyouandyou-main/image/cat.jpg" alt = "Profile Zone">
             <p> 귀여운 고양이 사진 보고가세영 </p>
            
 
